fix(header): revert changes and align subnav to vertical nav in cds-theme (#965)
Revert changes from #953 and align responsive nav to vertical nav.

---------

--- a/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
@@ -11,6 +11,9 @@
 @use '../vertical-nav/vertical-nav.clarity';
 @use 'header.clarity';
 @use 'variables.responsive-nav' as responsive-nav-variables;
+@use '../../utils/variables/variables' as util-variables;
+@use '../tabs/tabs.clarity' as tabs;
+@use 'variables.subnav' as nav-variables;
 
 @mixin sliding-nav-positioning($top: 0, $right: auto, $bottom: 0, $left: 0) {
   display: flex;
@@ -271,22 +274,55 @@
         // TODO: more specificity in classname is preferable to nesting...
         .nav {
           padding-left: 0;
+          @include mixins.css-var(gap, clr-nav-vertical-gap-size, 0, variables.$clr-use-custom-properties);
 
           .nav-item {
-            height: variables.$clr_baselineRem_1_5;
+            @include mixins.css-var(
+              height,
+              clr-subnav-sm-item-height,
+              variables.$clr_baselineRem_1_5,
+              variables.$clr-use-custom-properties
+            );
             margin-right: 0;
           }
 
           .nav-link {
-            padding: variables.$clr_baselineRem_0_583 variables.$clr_baselineRem_1_16;
+            @include mixins.css-var(
+              padding,
+              clr-subnav-sm-link-padding,
+              0 variables.$clr_baselineRem_0_5 0 variables.$clr_baselineRem_1,
+              variables.$clr-use-custom-properties
+            );
+
             width: 100%;
             max-width: 100%;
             overflow: hidden;
             text-overflow: ellipsis;
+            border-radius: 0;
+            @include mixins.css-var(
+              border-top-left-radius,
+              clr-subnav-sm-link-border-radius,
+              variables.$clr-global-borderradius,
+              variables.$clr-use-custom-properties
+            );
+            @include mixins.css-var(
+              border-bottom-left-radius,
+              clr-subnav-sm-link-border-radius,
+              variables.$clr-global-borderradius,
+              variables.$clr-use-custom-properties
+            );
+
+            @include vertical-nav.vertical-nav-link-colors();
 
             &:hover,
             &.active {
               box-shadow: none;
+            }
+
+            &:hover {
+              &:not(.active)::before {
+                content: none;
+              }
             }
           }
         }
